Fix post text spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -198,6 +198,10 @@ ul.navbar-user {
   padding: 10px;
 }
 
+.post-text > p {
+  margin: 0;
+}
+
 h4.media-heading {
   font-size: 15px;
 }
